--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
-	"name": "Simple Sorbet Theme",
+	"name": "Simple Sorbet",
 	"version": "1.0.0",
 	"minAppVersion": "1.6.0",
 	"author": "DA Rasmussen",
    	"fundingUrl": "https://www.paypal.me/drasmussen93",
    	"authorUrl": "https://darbooks.com"
 }
+
